@@ -1,10 +1,13 @@
 QXmpp 0.7.4 (UNRELEASED)
 ------------------------
 
-  - Move server statistics to a counter / gauge system.
   - Add XEP-0249: Direct MUC Invitations attributes to QXmppMessage.
   - Add XEP-0045: Multi-User Chat attributes to QXmppPresence.
   - Improve GuiClient, stop using deprecated APIs.
+  - Improve QXmppServer:
+    * Move statistics to a counter / gauge system.
+    * Make it possible to call listenForClients and listenForServers
+      multiple times to supported multiple IP address / ports.
 
 QXmpp 0.7.3 (Sep 7, 2012)
 ------------------------
